# application/domain/src/main/java/com/hotel/reservation/reservation/service/ReservationFacade.java
@@ -6,5 +6,5 @@ public interface ReservationFacade {
 
     GetReservationResult getReservation(String reservationId);
 
-    void deleteReservation(String reservationId);
+    void cancelReservation(String reservationId);
 }
